--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@ body.darkMode .bar {
 /* Container Styles */
 .container {
   display: grid;
-  grid-template-columns: 20dvw 75dvw;
+  grid-template-columns: 23dvw 72dvw;
   justify-content: center;
   min-height: calc(100dvh - 2.5rem);
 }
@@ -90,10 +90,25 @@ body.darkMode .bar {
 /* Left Container */
 .leftContainer {
   padding: 1rem;
-  border-right: 1px solid #ccc;
   display: flex;
   flex-direction: column;
+  max-height: calc(100dvh - 5rem);
+  /* Adjust height as needed */
+  overflow-y: auto;
+  /* Enables vertical scrolling */
+  padding: 1rem;
   margin-bottom: 2.5rem;
+  border-right: 1px solid #ccc;
+}
+
+/* Optional: Add a scrollbar style for a consistent look */
+.leftContainer::-webkit-scrollbar {
+  width: 5px;
+}
+
+.leftContainer::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: var(--border-radius);
 }
 
 .todoList {
@@ -144,12 +159,14 @@ body.darkMode .bar {
   border-radius: var(--border-radius);
 }
 
-.editTask:hover {
-  background-color: var(--primary-hover-color);
+.editTask:hover img,
+.deleteTask:hover img {
+  transition: transform 0.3s ease;
 }
 
-.deleteTask:hover {
-  background-color: var(--danger-hover-color);
+.deleteTask:hover,
+.editTask:hover {
+  transform: scale(1.3);
 }
 
 #taskInput {
